[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "chrono",
    "uuid",
    "postgres",
    "migrate"
] }
config = "0.11"

[dev-dependencies]
reqwest = "0.11"
